Adding initial styles to page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world!
+<!DOCTYPE html>
+<html class="bg-blue">
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <title>VeroMedia</title>
+    </head>
+    <body>
+
+    </body>
+</html>
