--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="bg-blue">
     <head>
         <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
         <title>VeroMedia</title>
     </head>
     <body>
