--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html class="bg-blue">
+<html>
     <head>
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="./submit.js"></script>
         <title>VeroMedia</title>
     </head>
-    <body>
-        <p>VeroMedia</p>
+    <body class="bg-img">
+        <div class="container pt-5">
+            <p class="text-center text-white pt-5 text-extra-bold logo">VeroMedia</p>
+            <p class="text-center pt-3 text-white">
+                Vero aims to provide crowdsourced information about potentially distressing content in media, such as movies, books, and video games. By creating an online platform that delivers detailed and objective movie content notices, Vero hopes to improve the media consumption experience for everyone.
+            </p>
+            <div class="d-flex w-100 justify-content-center mt-4" id="signUpForm">
+                <input class="email-input shadow" type="text" id="email" name="email" placeholder="Email" />
+                <button type="submit" class="btn submit-btn ml-2 shadow" onclick="submitForm()">Sign Up</button>
+            </div>
+        </div>
+        
     </body>
 </html>
