Added responsiveness to site

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./styles.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -9,14 +10,15 @@
         <title>VeroMedia</title>
     </head>
     <body class="bg-img">
-        <div class="container pt-5">
-            <p class="text-center text-white pt-5 text-extra-bold logo">VeroMedia</p>
-            <p class="text-center pt-3 text-white">
+        <div class="container pt-md-5 pb-3">
+            <p class="text-center text-white pt-md-5 pt-2 text-extra-bold logo">VeroMedia</p>
+            <p class="text-center text-white pt-3 caption h1">Control the content that you consume</p>
+            <p class="text-center pt-4 text-white">
                 Vero aims to provide crowdsourced information about potentially distressing content in media, such as movies, books, and video games. By creating an online platform that delivers detailed and objective movie content notices, Vero hopes to improve the media consumption experience for everyone.
             </p>
-            <div class="d-flex w-100 justify-content-center mt-4" id="signUpForm">
+            <div class="d-flex flex-wrap w-100 justify-content-center mt-md-5 mt-4" id="signUpForm">
                 <input class="email-input shadow" type="text" id="email" name="email" placeholder="Email" />
-                <button type="submit" class="btn submit-btn ml-2 shadow" onclick="submitForm()">Sign Up</button>
+                <button type="submit" class="btn submit-btn ml-sm-2 shadow" onclick="submitForm()">I'm interested</button>
             </div>
         </div>
         
