Button text not nunito

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
             <div class="d-flex flex-wrap w-100 justify-content-center mt-md-5 mt-4" id="signUpForm">
                 <input class="email-input shadow" type="text" id="email" name="email" placeholder="Email" />
-                <button type="submit" class="btn submit-btn ml-sm-2 shadow" onclick="submitForm()">I'm interested</button>
+                <button type="submit" class="btn submit-btn ml-sm-2 shadow" onclick="submitForm()"><p>I'm interested</p></button>
             </div>
         </div>
         
