--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <input class="email-input shadow" type="text" id="email" name="email" placeholder="Email" />
                 <button type="submit" class="btn submit-btn ml-sm-2 shadow" onclick="submitForm()"><p>I'm interested</p></button>
             </div>
-            <p class="hide text-white mt-3" id="success">Thanks for signing up. Stay tuned for exciting updates!</p>
-            <p class="hide text-white mt-3" id="error">Unable to add email address to mailing list. Please try again later.</p>
+            <p class="hide text-white mt-3 text-center" id="success">Thanks for signing up. Stay tuned for exciting updates!</p>
+            <p class="hide text-white mt-3 text-center" id="error">Unable to add email address to mailing list. Please try again later.</p>
         </div>
         
     </body>
