--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./styles.css" />
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?" />
+        <!-- <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?" /> -->
+        <link rel="shortcut icon" type="image/png" href="/favicon.png?" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
