minor changes to logo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body class="bg-img">
         <div class="container pt-md-5 pb-3">
             <p class="text-center text-white pt-md-5 pt-2 text-extra-bold logo">VeroMedia</p>
+            <!-- <img src="./vero-logo.png" class="logo" /> -->
             <p class="text-center text-white pt-3 caption h1">Control the content that you consume</p>
             <p class="text-center pt-4 text-white">
                 Vero aims to provide crowdsourced information about potentially distressing content in media, such as movies, books, and video games. By creating an online platform that delivers detailed and objective movie content notices, Vero hopes to improve the media consumption experience for everyone.
